--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,8 @@ branches:
 cache:
   yarn: true
 script:
-  - echo "This runs in Travis"
-  - echo "Please add real code here"
+  - git config --global user.name "${GH_NAME}"
+  - git config --global user.email "${GH_EMAIL}"
+  - echo "machine github.com login ${GH_NAME} password ${GH_TOKEN}" > ~/.netrc
+  - cd website && yarn install && GIT_USER="${GH_NAME}" yarn run publish-gh-pages
+  
