--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ script:
 
 deploy:
   provider: script
-  script: bash scripts/deploy.sh
+  script: bash ../scripts/deploy.sh
   on:
     branch: master
