Add dependencies for stripping markdown from docs

--- a/website/package.json
+++ b/website/package.json
@@ -6,9 +6,13 @@
     "publish-gh-pages": "docusaurus-publish",
     "write-translations": "docusaurus-write-translations",
     "version": "docusaurus-version",
-    "rename-version": "docusaurus-rename-version"
+    "rename-version": "docusaurus-rename-version",
+    "strip-markdown": "rm -r ../stripped-docs/* && node scripts/strip-markdown"
   },
   "devDependencies": {
-    "docusaurus": "^1.11.1"
+    "docusaurus": "^1.11.1",
+    "filehound": "^1.17.3",
+    "fs-extra": "^8.1.0",
+    "remove-markdown": "^0.3.0"
   }
 }
