--- a/website/package.json
+++ b/website/package.json
@@ -7,7 +7,7 @@
     "write-translations": "docusaurus-write-translations",
     "version": "docusaurus-version",
     "rename-version": "docusaurus-rename-version",
-    "strip-markdown": "rm -r ../stripped-docs/* && node scripts/strip-markdown"
+    "strip-markdown": "rm -rf ../stripped-docs/* && node scripts/strip-markdown"
   },
   "devDependencies": {
     "docusaurus": "^1.12.0",
